# OPEN_SANDER_BOX_CPP

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
data/aircraft/E195/: E195.xml
data/aircraft/E195/FDM/: flight-control.xml
data/aircraft/dc3/: dc3.xml
data/aircraft/dc3/Systems/: DC3-Params.xml  Landing Gear.xml
data/engine/: GE_CF34-10E-L.xml  GE_CF34-10E-R.xml
data/models/: cockpit.mtl  erj195.mtl  erj195_parts.json
src/: AcModel.cpp  AcModel.h  AirportManager.cpp  AirportManager.h  Clouds.cpp  Clouds.h  FDM.cpp  FDM.h  FlyByWire.cpp  FlyByWire.h  OSMManager.cpp  OSMManager.h  PostFX.cpp  PostFX.h  Sky.cpp  Sky.h  Terrain.cpp  Terrain.h  TileManager.cpp  TileManager.h  main.cpp
tools/: ac2obj.py  cockpit2obj.py  gen_parts_from_xml.py
